--- a/src/components/kanban/issues/kanban_issues.css
+++ b/src/components/kanban/issues/kanban_issues.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  cursor: move;
 }
 
 .kanban-issue:last-child {
@@ -25,6 +26,37 @@
   align-items: center;
 }
 
+.issue-meta .meta-left {
+  display: flex;
+  align-items: center;
+}
+
+.issue-meta .meta-left .issue-type {
+  display: flex;
+  cursor: pointer;
+}
+
+.issue-meta .meta-left .issue-id {
+  color: white;
+  margin-left: 8px;
+}
+
+.issue-meta .meta-right {
+  display: flex;
+  align-items: center;
+}
+
+.issue-meta .meta-right .issue-priority {
+  display: flex;
+  cursor: pointer;
+}
+
+.issue-meta .meta-right .issue-assignee {
+  margin-left: 8px;
+  display: flex;
+  cursor: pointer;
+}
+
 img.icon {
   width: 30px;
   height: 30px;
@@ -34,5 +66,4 @@ img.user-avatar {
   height: 35px;
   width: 35px;
   border-radius: 50%;
-  margin-left: 10px;
 }
