--- a/src/components/kanban/issues/kanban_issues.css
+++ b/src/components/kanban/issues/kanban_issues.css
@@ -1,5 +1,5 @@
 .kanban-issue {
-  background-color: black;
+  background-color: #545454;
   padding: 8px;
   margin-bottom: 10px;
   border-radius: 4px;
@@ -18,6 +18,7 @@
   margin: 0px;
   color: white;
   margin-bottom: 10px;
+  font-weight: 400;
 }
 
 .issue-meta {
@@ -58,8 +59,8 @@
 }
 
 img.icon {
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
 }
 
 img.user-avatar {
