Dynamic height to kanban board

--- a/src/components/kanban/kanban.css
+++ b/src/components/kanban/kanban.css
@@ -1,7 +1,6 @@
 .kanban-board-container {
-  background-color: rgb(99, 99, 99);
+  background-color: #636363;
   overflow: auto;
-  height: 100vh;
 }
 
 .kanban-issues-container {
